crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__lower__tests__lower-ac_with_vsource.snap
---
source: crates/spicy_netlist/src/reader/lower.rs
assertion_line: 762
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 2,
        resistors: [
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    0,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [
            TwoTerminal {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    0,
                ),
            },
        ],
        isources: [],
    },
    params: Params {
        temp: 300.15,
        resistor_models: [
            ResistorModel {
                tc1: 0.0,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
        ],
        resistors: [
            ResistorParams {
                r: 1000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
        ],
        capacitor_models: [],
        capacitors: [],
        inductor_models: [],
        inductors: [],
        diode_models: [],
        diodes: [],
        bjt_models: [],
        bjts: [],
        vsources: [
            SourceParams {
                waveform: Dc(
                    5.0,
                ),
                ac: Phasor {
                    magnitude: 1.5,
                    phase: 0.7853981633974483,
                },
            },
        ],
        isources: [],
    },
    names: CircuitNames {
        title: "AC test with voltage source DC and AC",
        nodes: [
            "0",
            "out",
        ],
        resistors: [
            "R1",
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [
            "V1",
        ],
        isources: [],
        diode_models: [],
        bjt_models: [],
    },
    analyses: [
        Ac(
            AcSweep {
                spacing: Linear(
                    3,
                ),
                start: 10.0,
                stop: 100.0,
            },
        ),
    ],
    options: SolverOptions {
        reltol: None,
        vntol: None,
        abstol: None,
    },
}
