crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__lower__tests__lower-basic_resistor.snap
---
source: crates/spicy_netlist/src/reader/lower.rs
assertion_line: 762
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 3,
        resistors: [
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    0,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [],
        isources: [],
    },
    params: Params {
        temp: 300.15,
        resistor_models: [
            ResistorModel {
                tc1: 0.0,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
        ],
        resistors: [
            ResistorParams {
                r: 1000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 1123400000000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: -10.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.5,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 1.25,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 2500.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 2500.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.0025,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: -3000000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 10000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 47000000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.001,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.00022,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 3.3e-8,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 4.7e-12,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 8e-15,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 1e-18,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.0012,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 123000000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: -990000000000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
        ],
        capacitor_models: [],
        capacitors: [],
        inductor_models: [],
        inductors: [],
        diode_models: [],
        diodes: [],
        bjt_models: [],
        bjts: [],
        vsources: [],
        isources: [],
    },
    names: CircuitNames {
        title: "basic resistor",
        nodes: [
            "0",
            "in",
            "out",
        ],
        resistors: [
            "R1",
            "R2",
            "R3",
            "R4",
            "R5",
            "R6",
            "R6",
            "R7",
            "R8",
            "R9",
            "R10",
            "R11",
            "R12",
            "R13",
            "R14",
            "R15",
            "R16",
            "R17",
            "R18",
            "R19",
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [],
        isources: [],
        diode_models: [],
        bjt_models: [],
    },
    analyses: [],
    options: SolverOptions {
        reltol: None,
        vntol: None,
        abstol: None,
    },
}
