crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__lower__tests__lower-bjt_basic.snap
---
source: crates/spicy_netlist/src/reader/lower.rs
assertion_line: 762
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 4,
        resistors: [],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [
            Bjt {
                collector: NodeId(
                    1,
                ),
                base: NodeId(
                    2,
                ),
                emitter: NodeId(
                    3,
                ),
                model: BjtModelId(
                    0,
                ),
            },
        ],
        vsources: [],
        isources: [],
    },
    params: Params {
        temp: 300.15,
        resistor_models: [],
        resistors: [],
        capacitor_models: [],
        capacitors: [],
        inductor_models: [],
        inductors: [],
        diode_models: [],
        diodes: [],
        bjt_models: [
            BjtModel {
                polarity: Npn,
                is: 1e-16,
                bf: 100.0,
                br: 1.0,
                nf: 1.0,
                nr: 1.0,
                xtb: 0.0,
                xti: 3.0,
                eg: 1.11,
                tnom: 300.15,
            },
        ],
        bjts: [
            BjtParams {
                area: 2.0,
                m: 5.0,
                off: true,
                ic_vbe: 0.7,
                ic_vce: 1.2,
                temperature: Offset(
                    0.0,
                ),
            },
        ],
        vsources: [],
        isources: [],
    },
    names: CircuitNames {
        title: "basic bjt",
        nodes: [
            "0",
            "c",
            "b",
            "e",
        ],
        resistors: [],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [
            "Q1",
        ],
        vsources: [],
        isources: [],
        diode_models: [],
        bjt_models: [
            "Qmod",
        ],
    },
    analyses: [],
    options: SolverOptions {
        reltol: None,
        vntol: None,
        abstol: None,
    },
}
