crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__lower__tests__lower-params_mixed.snap
---
source: crates/spicy_netlist/src/reader/lower.rs
assertion_line: 762
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 6,
        resistors: [
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    1,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    2,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    3,
                ),
            },
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    3,
                ),
            },
        ],
        capacitors: [
            Capacitor {
                positive: NodeId(
                    3,
                ),
                negative: NodeId(
                    2,
                ),
                model: CapacitorModelId(
                    0,
                ),
            },
            Capacitor {
                positive: NodeId(
                    3,
                ),
                negative: NodeId(
                    2,
                ),
                model: CapacitorModelId(
                    1,
                ),
            },
            Capacitor {
                positive: NodeId(
                    3,
                ),
                negative: NodeId(
                    2,
                ),
                model: CapacitorModelId(
                    2,
                ),
            },
        ],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [
            TwoTerminal {
                positive: NodeId(
                    4,
                ),
                negative: NodeId(
                    0,
                ),
            },
            TwoTerminal {
                positive: NodeId(
                    4,
                ),
                negative: NodeId(
                    5,
                ),
            },
        ],
        isources: [],
    },
    params: Params {
        temp: 300.15,
        resistor_models: [
            ResistorModel {
                tc1: 0.1,
                tc2: 0.01,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
            ResistorModel {
                tc1: 0.02,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
            ResistorModel {
                tc1: 0.0,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
            ResistorModel {
                tc1: 345.0,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
        ],
        resistors: [
            ResistorParams {
                r: 4000.0,
                r_ac: Some(
                    8.0,
                ),
                m: 3.0,
                temperature: Fixed(
                    573.15,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 560000.0,
                r_ac: Some(
                    280.0,
                ),
                m: 5.0,
                temperature: Fixed(
                    279.15,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 30000.0,
                r_ac: Some(
                    70.0,
                ),
                m: 9.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 2000.0,
                r_ac: Some(
                    1.0,
                ),
                m: 5.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
            ResistorParams {
                r: 0.001,
                r_ac: Some(
                    1.0,
                ),
                m: 5.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
        ],
        capacitor_models: [
            CapacitorModel {
                tc1: 0.1,
                tc2: 0.01,
                tnom: 300.15,
            },
            CapacitorModel {
                tc1: 0.2,
                tc2: 0.02,
                tnom: 300.15,
            },
            CapacitorModel {
                tc1: 0.0,
                tc2: 0.0,
                tnom: 300.15,
            },
        ],
        capacitors: [
            CapacitorParams {
                c: 3e-6,
                m: 2.0,
                ic: 0.5,
                temperature: Fixed(
                    573.15,
                ),
            },
            CapacitorParams {
                c: 9.999999999999999e-6,
                m: 4.0,
                ic: 0.1,
                temperature: Fixed(
                    533.15,
                ),
            },
            CapacitorParams {
                c: 3e-5,
                m: 1.0,
                ic: 0.3,
                temperature: Offset(
                    0.0,
                ),
            },
        ],
        inductor_models: [],
        inductors: [],
        diode_models: [],
        diodes: [],
        bjt_models: [],
        bjts: [],
        vsources: [
            SourceParams {
                waveform: Dc(
                    5.0,
                ),
                ac: Phasor {
                    magnitude: 0.0,
                    phase: 0.0,
                },
            },
            SourceParams {
                waveform: Dc(
                    1200.0,
                ),
                ac: Phasor {
                    magnitude: 0.0,
                    phase: 0.0,
                },
            },
        ],
        isources: [],
    },
    names: CircuitNames {
        title: "params mixing",
        nodes: [
            "0",
            "n1",
            "n0",
            "n2",
            "n3",
            "n4",
        ],
        resistors: [
            "R1",
            "R2",
            "R3",
            "R3",
            "R4",
        ],
        capacitors: [
            "C1",
            "C2",
            "C3",
        ],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [
            "V1",
            "V2",
        ],
        isources: [],
        diode_models: [],
        bjt_models: [],
    },
    analyses: [
        Op,
    ],
    options: SolverOptions {
        reltol: None,
        vntol: None,
        abstol: None,
    },
}
