crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__lower__tests__lower-stop_at_end.snap
---
source: crates/spicy_netlist/src/reader/lower.rs
assertion_line: 762
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 3,
        resistors: [
            Resistor {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: ResistorModelId(
                    0,
                ),
            },
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [],
        isources: [],
    },
    params: Params {
        temp: 300.15,
        resistor_models: [
            ResistorModel {
                tc1: 0.0,
                tc2: 0.0,
                default_width: 1e-5,
                default_length: 1e-5,
                tnom: 300.15,
            },
        ],
        resistors: [
            ResistorParams {
                r: 1000.0,
                r_ac: None,
                m: 1.0,
                temperature: Offset(
                    0.0,
                ),
                noisy: true,
            },
        ],
        capacitor_models: [],
        capacitors: [],
        inductor_models: [],
        inductors: [],
        diode_models: [],
        diodes: [],
        bjt_models: [],
        bjts: [],
        vsources: [],
        isources: [],
    },
    names: CircuitNames {
        title: "stop after end",
        nodes: [
            "0",
            "in",
            "out",
        ],
        resistors: [
            "R1",
        ],
        capacitors: [],
        inductors: [],
        diodes: [],
        bjts: [],
        vsources: [],
        isources: [],
        diode_models: [],
        bjt_models: [],
    },
    analyses: [
        Op,
    ],
    options: SolverOptions {
        reltol: None,
        vntol: None,
        abstol: None,
    },
}
